<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_date">Event date</string>
    <string name="event_type">Event type</string>
    <string name="event_desc">Event description</string>
    <string-array name="simple_items">
        <item>Festival</item>
        <item>Carnival</item>
        <item>Party</item>
        <item>Reunion</item>
    </string-array>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_timeline">Timeline</string>
    <string name="navigation_maps">Maps</string>
    <string name="navigation_addevent">Add Event</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="logoutButton">logout</string>
    <string name="loginButton">login</string>
    <string name="mapsString">Maps</string>
    <string name="favoritesString">Favorites</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="event_title">Event Title</string>
    <string name="event_typeX">Event Type</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="event_locationX">Event Location</string>
    <string name="event_dateX">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>
    <string name="choose_login_method">Choose login method</string>
    <string name="loginText">Login</string>
    <string name="guestText">Guest</string>
    <string name="user_info_title">default\n</string>
    <string name="user_info">user info</string>
    <string name="logout">logout</string>
    <string name="toggle_drawing_mode">Toggle Drawing Mode</string>
</resources>