<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="60dp"
    android:paddingEnd="60dp">

    <!-- CardView with rounded corners -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Card content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Top of the Card -->
            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Profile Picture -->
                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_account_circle_24"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:padding="8dp"/>

                <!-- Title and Type -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp">

                    <TextView
                        android:id="@+id/text_event_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_title"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/text_event_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_typeX"
                        android:textAppearance="?attr/textAppearanceBody2"/>
                </LinearLayout>

                <!-- Right Heart Icon -->
                <ImageView
                    android:id="@+id/icon_heart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_favorite_24"
                    android:contentDescription="@string/heart_icon"/>
            </LinearLayout>

            <!-- Middle of the Card - Image -->
            <ImageView
                android:id="@+id/image_event"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/baseline_image_24"/>

            <!-- Bottom of the Card -->
            <LinearLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Location and Date -->
                <TextView
                    android:id="@+id/text_event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_locationX"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/text_field_event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_dateX"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <!-- Description -->
                <TextView
                    android:id="@+id/text_event_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_marginTop="8dp"
                    android:maxLines="2"
                    android:ellipsize="end"/>

                <!-- Edit and Info Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <Button
                        android:id="@+id/button_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/editButton"
                        android:background="@null"/>

                    <Button
                        android:id="@+id/button_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infoButton"
                        android:background="@null"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
